--- a/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
+++ b/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
@@ -1,5 +1,5 @@
 <h3 mat-dialog-title>Please complete all the disciplines details</h3>
-<div mat-dialog-content [formGroup]="disciplineDetailsForm">
+<div mat-dialog-content [formGroup]="disciplineDetailsForm" class="fields-container">
     <!-- <mat-horizontal-stepper linear>
         <mat-step [stepControl]="disciplineDetailsForm">
           <ng-template matStepLabel>Discipline details</ng-template>
