--- a/src/app/alert-dialog/alert-dialog.component.html
+++ b/src/app/alert-dialog/alert-dialog.component.html
@@ -5,6 +5,6 @@
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Delete</button>
+  <button mat-flat-button mat-dialog-close>Cancel</button>
+  <button mat-flat-button [mat-dialog-close]="true" color="warn" cdkFocusInitial>Delete</button>
 </mat-dialog-actions>
