--- a/src/app/discipline-details/discipline-details.component.scss
+++ b/src/app/discipline-details/discipline-details.component.scss
@@ -10,11 +10,35 @@
     color: white;
     box-shadow: 0 0px 20px black;
 
-    h2 {
+    h2, h4 {
         padding-left: 30px;
     }
 }
 
 .details {
-    background-color: white;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    column-gap: 2em;
+    row-gap: 2em;
+
+    .discipline-card {
+        padding: 0;
+
+        .header-container {
+            background: rgb(161, 70, 70);
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
+        
+        .content {
+            padding: 10px 12px;
+            margin: 0;
+        }
+        
+        .footer-actions {
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 10px;
+        }
+    }  
 }
