--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -8,7 +8,7 @@
 }
 
 .disciplines-tab {
-    padding-top: 120px;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,6 +55,8 @@
     
         .header-container {
             background: rgb(161, 70, 70);
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
         }
         
         .header-container:hover {
