Styled a bit the content of the discipline preferences component

--- a/src/app/discipline-preferences/discipline-preferences.component.html
+++ b/src/app/discipline-preferences/discipline-preferences.component.html
@@ -1,4 +1,5 @@
 <div class="discipline-preferences">
+  <h2>{{ discipline?.name }}</h2>
   <div *ngFor="let timetable of discipline?.timetable">
     {{ timetable.option }}
     {{ getAvailablePlaces(timetable.option) }}
