--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -2,7 +2,7 @@
 <div class="preferences-container">
     <mat-drawer-container class="sidenav-container">
         <mat-drawer #sidenav [mode]="mode" [opened]="openSidenav" class="menu">
-            <h3>List of your disciplines
+            <h3>Disciplines
                 <button *ngIf="!openSidenav" mat-icon-button (click)="sidenav.toggle()">
                     <mat-icon>
                         arrow_left
@@ -21,9 +21,12 @@
             </ng-template>
         </mat-drawer>
         <mat-drawer-content>
-            <button mat-icon-button (click)="sidenav.toggle()" class="mobile-menu">
-                <mat-icon>arrow_right</mat-icon>
-            </button>
+            <div class="menu-button">
+                <button mat-icon-button (click)="sidenav.toggle()" class="mobile-menu">
+                    <mat-icon>arrow_right</mat-icon>
+                </button>
+            </div>
+            
             <router-outlet></router-outlet>
         </mat-drawer-content>
     </mat-drawer-container>
