Added extra field on admin dashboard add and edit components

--- a/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
+++ b/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
@@ -132,6 +132,11 @@
       </mat-select> 
     </mat-form-field>  
 
+    <mat-form-field>
+      <mat-label>Maximum number of students per timetable</mat-label>
+      <input matInput formControlName="maxNoOfStudentsPerTimetable" required>
+    </mat-form-field>
+
     <button mat-button (click)="addTimetable()">Add Timetable Option</button>
 
     <div formArrayName="timetable" *ngFor="let timetableOption of dynamicTimetable.controls; let i=index">
