--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.html
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.html
@@ -71,6 +71,11 @@
                         </mat-select> 
                         <mat-error *ngIf="disciplineDetailsForm.controls.studyYear.invalid">Please complete study year</mat-error>
                     </mat-form-field>
+
+                    <mat-form-field appearance="outline">
+                        <mat-label>Maximum number of students per timetable</mat-label>
+                        <input matInput formControlName="maxNoOfStudentsPerTimetable" required>
+                    </mat-form-field>
                 </div>
 
                 <div class="dynamic-details">
