--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,12 +32,12 @@
 
   <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
     <mat-nav-list>
-      <a mat-button *ngIf="getUserState() && isAdmin()" [routerLink]="['/dashboard']" (click)="sidenav.close()">Dashboard</a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" (click)="sidenav.close()">Disciplines</a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/preferences']" (click)="sidenav.close()">Preferences</a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" (click)="sidenav.close()">Profile</a>
-      <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" (click)="sidenav.close(); logout()">Logout</a>
-      <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Login</a>
+      <a mat-button *ngIf="getUserState() && isAdmin()" [routerLink]="['/dashboard']" routerLinkActive="active-text" (click)="sidenav.close()">Dashboard</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" routerLinkActive="active-text" (click)="sidenav.close()">Disciplines</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/preferences']" routerLinkActive="active-text" (click)="sidenav.close()">Preferences</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" routerLinkActive="active-text" (click)="sidenav.close()">Profile</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" routerLinkActive="active-text" (click)="sidenav.close(); logout()">Logout</a>
+      <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" routerLinkActive="active-text" (click)="sidenav.close()">Login</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content fxFlexFill>
