--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -19,6 +19,10 @@
   background: rgba(97, 63, 63, 0.856);
 }
 
+.active-text {
+  color: rgba(97, 63, 63, 0.856);
+}
+
 .bank {
   height: 100%; 
 }
@@ -57,6 +61,12 @@
 .sidenav-container {
   height: calc(100% - 64px);
 }
+
+// mat-sidenav-content {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
 
 mat-nav-list {
   display: flex;
