Added a theme and modified colors in scss files

--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.scss
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .discipline-details {
     width: 80%;
     margin: auto;
@@ -5,7 +7,7 @@
 
 .name {
     margin-top: 40px;
-    background-color: rgba(97, 26, 26);
+    background-color: $color-1;
     width: 100%;
     color: white;
     box-shadow: 0 0px 20px black;
