--- a/src/app/discipline-details/discipline-details.component.html
+++ b/src/app/discipline-details/discipline-details.component.html
@@ -1,8 +1,10 @@
+<header class="name">
+    <span>
+    <h2>{{discipline?.name}}</h2>
+    <h4>Teacher: {{discipline?.teacher}}</h4>
+</span>
+</header>
 <div class="discipline-details">
-    <header class="name">
-        <h2>{{discipline?.name}}</h2>
-        <h4>Teacher: {{discipline?.teacher}}</h4>
-    </header>
 
     <div class="details">
 
