--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar class="toolbar">
-
-  <a mat-button class="app-name" [routerLink]="['/']">
-    <p>Distributor</p>
-  </a>
+  <div class="app-title">
+    <a mat-button class="app-name" [routerLink]="['/']">
+      <span>Distributor</span>
+    </a>
+  </div>
 
   <div class="bank">
     <div fxShow="true" fxHide.lt-md="true" class="menu-items">
