--- a/src/app/admin-edit-discipline/admin-edit-discipline.component.html
+++ b/src/app/admin-edit-discipline/admin-edit-discipline.component.html
@@ -100,7 +100,7 @@
             </div>
         </form>
         <div class="button-container">
-            <button class="submit-button" mat-raised-button (click)="submit()" [disabled]="!disciplineDetailsForm.touched">SAVE</button>
+            <button class="submit-button" color="warn" mat-raised-button (click)="submit()" [disabled]="!disciplineDetailsForm.touched">SAVE</button>
         </div>
     </div>    
 </div>
