--- a/src/app/delete-user/delete-user.component.scss
+++ b/src/app/delete-user/delete-user.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .delete-account-container {
 
     .mat-icon {
@@ -16,7 +18,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        background-color: rgb(97, 26, 26);
+        background-color: $color-3;
         color: white;
     }
 }
