--- a/src/app/discipline-details/discipline-details.component.scss
+++ b/src/app/discipline-details/discipline-details.component.scss
@@ -1,17 +1,16 @@
+@import '../../styles/colors';
+
 .discipline-details {
     width: 80%;
     margin: auto;
 }
 
 .name {
-    margin-top: 40px;
-    background-color: rgba(97, 26, 26);
+    background-color: aquamarine;
     width: 100%;
-    color: white;
-    box-shadow: 0 0px 20px black;
 
     h2, h4 {
-        padding-left: 30px;
+        margin-top: 0;
     }
 }
 
@@ -25,7 +24,7 @@
         padding: 0;
 
         .header-container {
-            background: rgb(161, 70, 70);
+            background: $color-4;
             border-top-left-radius: 4px;
             border-top-right-radius: 4px;
         }
