--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .disciplines-container {
     display: flex;
     flex-direction: column;
@@ -54,14 +56,14 @@
         padding: 0;
     
         .header-container {
-            background: rgb(161, 70, 70);
+            background: $color-4;
             border-top-left-radius: 4px;
             border-top-right-radius: 4px;
         }
         
         .header-container:hover {
             cursor: pointer;
-            background: rgb(209, 171, 171);
+            background: rgba($color-5, 0.6);
         }
         
         .content {
