--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,22 +1,8 @@
+@import '../../styles/colors';
+
 .profile-container {
     width: 80%;
     margin: auto;
-}
-
-.username-container {
-    margin-top: 60px;
-    background-color: rgba(97, 26, 26);
-    width: 100%;
-    color: white;
-    border-radius: 5px;
-
-    h1 {
-        padding-left: 20px;
-        height: 60px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
 }
 
 .profile {
@@ -35,7 +21,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: rgba(97, 26, 26);
+        background-color: $color-5;
         padding: 0;
         border-radius: 5px;
 
@@ -62,7 +48,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid red;
     --avatar-size: 8rem;
     margin-bottom: 20px;
 
