--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .form-group {
     display: flex;
     flex-direction: column;
@@ -12,6 +14,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgb(97, 26, 26);
+    background-color: $color-3;
     color: white;
 }
