Added a valuable validator for password check in reset password

--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -16,7 +16,7 @@
                     <button mat-icon-button matSuffix (click)="hideFlag2 = !hideFlag2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag2">
                 <mat-icon>{{ hideFlag2 ? 'visibility_off' : 'visibility' }}</mat-icon>
                 </button>
-                <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.invalid">{{ getConfirmPasswordError() }}</mat-error>
+                <mat-error *ngIf="resetPasswordForm.invalid">{{ getConfirmPasswordError() }}</mat-error>
             </mat-form-field>
         </div>
     </form>
