--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar">
+<mat-toolbar color="primary">
   <div class="app-title">
     <a mat-button class="app-name" [routerLink]="['/']">
       <span>Distributor</span>
