Integrated institutions selection

--- a/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
+++ b/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.html
@@ -93,8 +93,8 @@
     <mat-form-field>
       <mat-label>Institution</mat-label>
       <mat-select formControlName="studyInstitution">
-        <mat-option *ngFor="let institution of institutions" [value]="institution.institution">
-          {{ institution.institution }}
+        <mat-option *ngFor="let institution of institutions" [value]="institution.studyInstitution">
+          {{ institution.studyInstitution }}
         </mat-option>
       </mat-select>
     </mat-form-field>
