--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -1,6 +1,11 @@
 <div class="disciplines-container">
     <header class="title-container">
-        <h1>Disciplines</h1>
+        <div class="title-wrapper">
+            <div class="heading-wrapper">
+                <h1>Disciplines</h1>
+            </div>
+        </div>
+        <!-- <svg width="100%" height="100px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#012a36" fill-opacity="1" d="M0,128L0,32L288,32L288,64L576,64L576,256L864,256L864,320L1152,320L1152,192L1440,192L1440,320L1152,320L1152,320L864,320L864,320L576,320L576,320L288,320L288,320L0,320L0,320Z"></path></svg> -->
     </header>
 
     <!--POC: or i can use cards -->
@@ -21,7 +26,9 @@
     <div class="disciplines-tab">
         <div *ngIf="userDisciplines?.length > 0; else noDisciplines" class="disciplines-table">
             <div class="table-add-button">
-                <button mat-button (click)="openDialog()"><mat-icon>add_circle</mat-icon>Add discipline</button>
+                <button mat-button (click)="openDialog()">
+                    <mat-icon>add_circle</mat-icon>Add discipline
+                </button>
             </div>
 
             <div class="cards-container">
@@ -46,18 +53,18 @@
                 </div>
             </div>
         </div>
-    <div>
+        <div>
 
-    <ng-template #noDisciplines>
-        <div class="no-discipline">
-            <button mat-button (click)="openDialog()">
-                <span class="add-button">
-                    <mat-icon class="add-icon">library_add</mat-icon>
-                    Add discipline
-                </span>
-            </button>
-            You've not selected any discipline
+            <ng-template #noDisciplines>
+                <div class="no-discipline">
+                    <button mat-button (click)="openDialog()">
+                        <span class="add-button">
+                            <mat-icon class="add-icon">library_add</mat-icon>
+                            Add discipline
+                        </span>
+                    </button>
+                    You've not selected any discipline
+                </div>
+            </ng-template>
+
         </div>
-    </ng-template>
-
-</div>
