--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -6,7 +6,32 @@
 }
 
 .title-container {
-    background-color: aquamarine;
+    background: linear-gradient(60deg, #012a36 30%, #044e64 100%);
+    height: 150px;
+    color: white;
+}
+
+.title-wrapper {
+    height: inherit;
+    width: 100%;
+    background-image: url('../../assets/ttten.svg');
+    background-position: center;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+}
+
+.heading-wrapper {
+    width: 90%;
+    margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    h1 {
+        margin: 0;
+        font-size: 50px;
+    }
 }
 
 .disciplines-tab {
