Made some style improvements

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,11 @@
 <div class="disciplines-container">
+    <header class="title-container">
+        <div class="title-wrapper">
+            <div class="heading-wrapper">
+                <h1>Dashboard</h1>
+            </div>
+        </div>
+    </header>
     <div class="disciplines-tab">
         <div *ngIf="mockDisciplines?.length > 0; else noDisciplines" class="disciplines-table">
             <div class="table-add-button">
