--- a/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -3,6 +3,35 @@
     flex-direction: column;
 }
 
+.title-container {
+    background: linear-gradient(60deg, #012a36 30%, #044e64 100%);
+    height: 150px;
+    color: white;
+}
+
+.title-wrapper {
+    height: inherit;
+    width: 100%;
+    background-image: url('../../assets/ttten2.svg');
+    background-position: center;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+}
+
+.heading-wrapper {
+    width: 90%;
+    margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    h1 {
+        margin: 0;
+        font-size: 50px;
+    }
+}
+
 .disciplines-tab {
     padding-top: 20px;
     display: flex;
