--- a/src/app/discipline-details/discipline-details.component.html
+++ b/src/app/discipline-details/discipline-details.component.html
@@ -1,34 +1,38 @@
-<header class="name">
-    <span>
-    <h2>{{discipline?.name}}</h2>
-    <h4>Teacher: {{discipline?.teacher}}</h4>
-</span>
+<header class="title-container">
+    <div class="title-wrapper">
+        <div class="heading-wrapper">
+            <h1>{{discipline?.name}}</h1>
+            <h3>Teacher: <i>{{discipline?.teacher}}</i></h3>
+        </div>
+    </div>
 </header>
+
 <div class="discipline-details">
 
     <div class="details">
 
-        <div *ngFor="let timetable of discipline?.timetable">
+        <div class="card-wrapper" *ngFor="let timetable of discipline?.timetable">
             <mat-card class="discipline-card">
                 <div class="header-container">
                     <div class="content">
                         <mat-card-title>{{ timetable.option }}</mat-card-title>
                         <mat-card-subtitle>
-                            Students: {{ getAvailablePlaces(timetable.option) }} / {{ discipline.maxNoOfStudentsPerTimetable }}
+                            Students: {{ getAvailablePlaces(timetable.option) }} / {{
+                            discipline.maxNoOfStudentsPerTimetable }}
                         </mat-card-subtitle>
                     </div>
                 </div>
-                
-                <mat-card-content class="content" >
+
+                <mat-card-content class="content">
                     <ng-container *ngIf="!getAvailablePlaces(timetable.option)">
                         No students distributed on this option
                     </ng-container>
-                    <ng-container *ngFor="let student of timetable.students; let i=index">
+                    <ng-container>
                         <table>
                             <th>No.</th>
                             <th>First Name</th>
                             <th>Last Name</th>
-                            <tr>
+                            <tr *ngFor="let student of timetable.students; let i=index">
                                 <td>{{ i+1 }}</td>
                                 <td>{{ getStudent(student)?.firstName }}</td>
                                 <td>{{ getStudent(student)?.lastName }}</td>
