--- a/src/app/discipline-details/discipline-details.component.scss
+++ b/src/app/discipline-details/discipline-details.component.scss
@@ -3,15 +3,35 @@
 .discipline-details {
     width: 80%;
     margin: auto;
+    padding-top: 20px;
 }
 
-.name {
-    background-color: aquamarine;
-    width: 100%;
+.title-container {
+    background: linear-gradient(60deg, #012a36 30%, #044e64 100%);
+    height: 100px;
+    color: white;
+}
 
-    h2, h4 {
-        margin-top: 0;
+.title-wrapper {
+    height: inherit;
+    width: 100%;
+    background-image: url('../../assets/ooorganize.svg');
+    background-position: center;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    h1, h3 {
+        margin: 0;
+        font-weight: 500;
     }
+}
+
+.heading-wrapper {
+    width: 80%;
+    margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .details {
@@ -40,4 +60,17 @@
             margin-right: 10px;
         }
     }  
+}
+
+@media screen and (max-width: 960px) {
+    .details {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card-wrapper {
+        width: 100%;
+    }
 }
