--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -102,6 +102,10 @@
             margin-right: 10px;
         }
     }
+
+    .discipline-card:hover {
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+    }
 }
 
 @media screen and (max-width: 960px) {
