--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -46,7 +46,7 @@
             </mat-form-field>
         </div>
     </form>
-    <button class="register-button" mat-raised-button (click)="submit()" [disabled]="registerForm.invalid">REGISTER</button>
+    <button color="primary" class="register-button" mat-raised-button (click)="submit()" [disabled]="registerForm.invalid">REGISTER</button>
 
     <div class="tips">
         <div>
