--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .register-container {
     width: 380px;
     margin: auto;
@@ -33,7 +35,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgb(97, 26, 26);
+    background-color: $color-3;
     color: white;
 }
 
