--- a/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.scss
+++ b/src/app/admin-add-discipline-dialog/admin-add-discipline-dialog.component.scss
@@ -1,4 +1,16 @@
 .fields-container {
     display: flex;
     flex-direction: column;
+    max-height: 70vh;
+}
+
+.timetable-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.lesson-form-row {
+    display: flex;
 }
