--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -46,7 +46,7 @@
                             <p>{{ discipline.department }}</p>
                         </mat-card-content>
                         <mat-card-actions class="footer-actions">
-                            <button (click)="unenrollUser(discipline._id, $event)" mat-button>Delete</button>
+                            <button color="error" (click)="unenrollUser(discipline._id, $event)" mat-button>Delete</button>
                         </mat-card-actions>
                     </mat-card>
                 </div>
