Modified color of the sidebar

--- a/src/app/preferences/preferences.component.scss
+++ b/src/app/preferences/preferences.component.scss
@@ -9,7 +9,7 @@
     height: calc(100vh - 64px);
     
     .menu {
-        background: $color-2;
+        background: $primary-blue;
         color: white;
         // width: 10em;
 
