--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -1,17 +1,17 @@
-
 <div class="preferences-container">
     <mat-drawer-container class="sidenav-container">
         <mat-drawer #sidenav [mode]="mode" [opened]="openSidenav" class="menu">
-            <h3>Disciplines
+            <h2>Disciplines
                 <button *ngIf="!openSidenav" mat-icon-button (click)="sidenav.toggle()">
                     <mat-icon>
                         arrow_left
                     </mat-icon>
                 </button>
-            </h3>
+            </h2>
             <div *ngIf="userDisciplines?.length > 0; else noDisciplines" class="disciplines-menu">
                 <div *ngFor="let discipline of userDisciplines" class="discipline-item">
-                    <a mat-button class="tab-item" [routerLink]="['view/discipline', discipline._id]" routerLinkActive="active" (click)="sidenav.toggle()">
+                    <a mat-button class="tab-item" [routerLink]="['view/discipline', discipline._id]"
+                        routerLinkActive="active" (click)="sidenav.toggle()">
                         {{ discipline.name }}
                     </a>
                 </div>
@@ -28,7 +28,7 @@
                     </mat-icon>
                 </button>
             </div>
-            
+
             <router-outlet></router-outlet>
         </mat-drawer-content>
     </mat-drawer-container>
